# lightspeed-to-dataverse-exporter

./: .coderabbit.yaml  .gitignore  .snyk  ARCHITECTURE.md  CONTRIBUTING.md  Containerfile  DEPLOYMENT.md  Makefile  ONBOARDING.md  OWNERS  README.md  build-args-konflux-ols.conf  config.yaml.example  pyproject.toml  pytest.ini  renovate.json  requirements-build.txt  requirements.aarch64.txt  requirements.txt  requirements.x86_64.txt  rpms.in.yaml  rpms.lock.yaml
.github/workflows/: build_and_push_main.yaml  build_and_push_pr.yaml  build_and_push_release.yaml  build_pr.yaml  ci.yml
.tekton/: dataverse-exporter-pull-request.yaml  dataverse-exporter-push-tag.yaml  dataverse-exporter-push.yaml  lightspeed-to-dataverse-exporter-eb494-pull-request.yaml  lightspeed-to-dataverse-exporter-eb494-push.yaml  lightspeed-to-dataverse-exporter-pull-request.yaml  lightspeed-to-dataverse-exporter-push.yaml
examples/: README.md  build-and-push.sh
examples/kubernetes/: configmap-prod.yaml  configmap-stage.yaml  configmap.yaml  deployment.yaml  job-prod.yaml  job-stage.yaml  namespace.yaml  rbac.yaml
scripts/: ingress_token_from_offline_token.py
src/: constants.py  data_exporter.py  file_handler.py  ingress_client.py  main.py  settings.py
src/auth/: __init__.py  factory.py  providers.py
src/auth/providers/: __init__.py  openshift.py  sso.py  types.py
tests/: conftest.py  test_auth.py  test_data_exporter.py  test_file_handler.py  test_ingress_client.py  test_main.py  test_settings.py
tests/e2e/: __init__.py
tests/e2e/features/: service_configuration.feature
tests/e2e/fixtures/: for_override.yaml  valid_complete.yaml
tests/e2e/step_definitions/: __init__.py  test_service_configuration.py
