[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightspeed-to-dataverse-exporter"
version = "0.1.0"
description = "Export Lightspeed data to Dataverse ingress service"
authors = []
maintainers = [
    {email = "ometelka@redhat.com", name = "Ondrej Metelka"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "requests>=2.25.0",
    "pyyaml>=6.0.0",
    "kubernetes>=33.1.0",
    "rich>=13.0.0",
    "pyjwt>=2.10",
]

[project.scripts]
lightspeed-exporter = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
timeout = 10

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.4.0",
    "pytest-bdd>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "requests-mock>=1.12.1",
]

[tool.ruff]
[tool.ruff.lint.flake8-tidy-imports]
banned-api = { "unittest" = { msg = "use pytest instead of unittest" }, "unittest.mock" = { msg = "use pytest-mock instead of unittest.mock" } }
